# meilie_updater

./: Cargo.toml  pyproject.toml
.github/workflows/: build_docker_image.yml  rust-clippy.yml
docker/: build.dockerfile
scripts/: env.sh  start.sh
src/: config.rs  main.rs  models.rs  updater.rs
src/app/: services.py  views.py
src/core/: app.py  config.py  setup_arq.py
